# rusty-post-api

./: .env  Cargo.toml  README.md
migrations/: 0001_init.down.sql  0001_init.up.sql  20240103175833_init.down.sql  20240103175833_init.up.sql
src/: config.rs  db.rs  db_test.rs  dtos.rs  error.rs  main.rs  models.rs  response.rs
src/db/: email.rs  mod.rs  person.rs  post.rs
src/dtos/: email.rs  mod.rs  person.rs  post.rs
src/scopes/: posts.rs
src/utils/: test.rs
