[package]
name = "rusty-post-api"
version = "0.1.0"
edition = "2021"
authors = ["SaeedAlian <https://github.com/SaeedAlian>"]

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.1"
argon2 = "0.5.2"
async-trait = "0.1.77"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.1"
futures-util = "0.3.30"
jsonwebtoken = "9.2.0"
openssl = "0.10.62"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
sqlx = { version = "0.7.3", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
